scripts/nullness/original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8.txt
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field curPos
    protected Position curPos;
                       ^
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:20: error: [initialization.field.uninitialized] the default constructor does not initialize field lastMovedDistance
    protected Numbers lastMovedDistance;
                      ^
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Exp.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: result
    public Exp() {
           ^
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Numbers.java:43: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Numbers
    @Initialized @NonNull boolean equals(@Initialized @NonNull Numbers this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Position.java:116: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Position
    @Initialized @NonNull boolean equals(@Initialized @NonNull Position this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Direction.java:37: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Direction
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/VarDecl.java:39: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull VarDecl
    @Initialized @NonNull boolean equals(@Initialized @NonNull VarDecl this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Identifier.java:42: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Identifier
    @Initialized @NonNull boolean equals(@Initialized @NonNull Identifier this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/IfThenElse.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: elseStmtList
    public IfThenElse(BooleanExp boolE, Stmt[] ifStmtList) {
           ^
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: result
    public BooleanExp(Exp e1, Booleans booleanValue, Exp e2) {
           ^
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:19: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.Exp.class) @NonNull BooleanExp
  required: @Initialized @NonNull BooleanExp
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Booleans.java:30: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Booleans
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Grid.java:23: error: [method.invocation] call to setSizeGlobal(statements.Size) not allowed on the given receiver.
        setSizeGlobal(sizeIns);
                     ^
  found   : @UnderInitialization(util.Grid.class) @NonNull Grid
  required: @Initialized @NonNull Grid
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:52: error: [method.invocation] call to printWelcome() not allowed on the given receiver.
        printWelcome();
                    ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:55: error: [method.invocation] call to makePrettyPrint(java.lang.String) not allowed on the given receiver.
        makePrettyPrint(name);
                       ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Robot.java:71: error: [return] incompatible types in return.
        return varDecls.get(ident);
                           ^
  type of expression: @Initialized @Nullable VarDecl
  method return type: @Initialized @NonNull VarDecl
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/exceptions/RobotOutOfGridException.java:11: error: [method.invocation] call to printStackTrace() not allowed on the given receiver.
        printStackTrace();
                       ^
  found   : @UnderInitialization(exceptions.RobotOutOfGridException.class) @NonNull Throwable
  required: @Initialized @NonNull Throwable
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Operand.java:29: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Operand
../original/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/PlusExp.java:20: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.PlusExp.class) @NonNull PlusExp
  required: @Initialized @NonNull PlusExp
19 errors
